--- a/index.html
+++ b/index.html
@@ -12,6 +12,34 @@
 
     <!-- visible content goes here -->
 
+    <header>
+        <div style="height: 100%; position: relative; top: -23px" class="row align-items-center">
+            <div class="col-12">
+                <h1>Usability Test</h1>
+                <h2>IMDB.com</h2>
+            </div>
+        </div>
+    </header>
+
+    <div class="container">
+        <div class="row">
+            <div class="col-6 col-sm-12">
+                <p>
+                    Sign in or Create an Account
+                </p>
+                <p>
+                    Time: 1 minute
+                </p>
+                <p>
+                    This task was very simple and easy to complete. The user clicked directly on the sign in button and created an account
+                </p>
+            </div>
+            <div class="col-6 col-sm-12">
+                <img src=""
+            </div>
+        </div>
+    </div>
+
     <!-- load javascript after the page elements render -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm" crossorigin="anonymous"></script>
     <script src="assets/js/main.js"></script>
