Added rows of tasks

--- a/index.html
+++ b/index.html
@@ -13,29 +13,115 @@
     <!-- visible content goes here -->
 
     <header>
-        <div style="height: 100%; position: relative; top: -23px" class="row align-items-center">
-            <div class="col-12">
-                <h1>Usability Test</h1>
-                <h2>IMDB.com</h2>
+        <div style="height: 100%" class="container">
+            <div style="height: 100%; position: relative; top: -23px" class="row align-items-center">
+                <div class="col-12">
+                    <h1>Usability Test</h1>
+                    <h2>IMDB.com</h2>
+                </div>
             </div>
         </div>
     </header>
 
     <div class="container">
         <div class="row">
-            <div class="col-6 col-sm-12">
-                <p>
+            <div class="col-12">
+                <h3 class="text-center">
+                    Tasks
+                </h3>
+            </div>
+        </div>
+        <!-- row 1 -->
+        <div class="row">
+            <div class="col-12 col-lg-6">
+                <h4>
                     Sign in or Create an Account
-                </p>
-                <p>
+                </h4>
+                <h5>
                     Time: 1 minute
-                </p>
+                </h5>
                 <p>
                     This task was very simple and easy to complete. The user clicked directly on the sign in button and created an account
                 </p>
             </div>
-            <div class="col-6 col-sm-12">
-                <img src=""
+            <div class="col-12 col-lg-6">
+                <img src="assets/img/1.png" class="float-lg-end">
+            </div>
+        </div>
+        <!-- row 2 -->
+        <div class="row">
+            <div class="col-12 col-lg-6">
+                <h4>
+                    Find the title, rating, creator, and stars of the highest-rated TV show of all time.
+                </h4>
+                <h5>
+                    Time: 1 minute 20 seconds
+                </h5>
+                <p>
+                    After trying to search for the TV show in the search bar, the user clicked on the menu and discovered the option for Top 250 TV Shows. All of the information was found quickly after clicking on the menu.
+                </p>
+            </div>
+            <div class="col-12 col-lg-6">
+                <img src="assets/img/2.png" class="float-lg-end">
+            </div>
+        </div>
+        <!-- row 3 -->
+        <div class="row">
+            <div class="col-12 col-lg-6">
+                <h4>
+                    Find your favorite movie and give it a 10/10 rating
+                </h4>
+                <h5>
+                    Time: 20 seconds
+                </h5>
+                <p>
+                    This was also a very easy task. The user typed the movie into the search bar on the home screen and was able to immediately rate it 10/10.
+                </p>
+            </div>
+            <div class="col-12 col-lg-6">
+                <img src="assets/img/3.png" class="float-lg-end">
+            </div>
+        </div>
+        <!-- row 4 -->
+        <div class="row">
+            <div class="col-12 col-lg-6">
+                <h4>
+                    Add a movie that is releasing this weekend to your watchlist
+                </h4>
+                <h5>
+                    Time: 1 minute 48 seconds 
+                </h5>
+                <p>
+                    The User used the knowledge of the menu that was gained in task 2 and used it to find upcoming movies. After searching the movies for one that was appealing, the user was able to add it to their watchlist after a couple seconds of looking for the button.
+                </p>
+            </div>
+            <div class="col-12 col-lg-6">
+                <img src="assets/img/4.png" class="float-lg-end">
+            </div>
+        </div>
+        <!-- row 5 -->
+        <div class="row">
+            <div class="col-12 col-lg-6">
+                <h4>
+                    Create a list of 5 movies that you like.
+                </h4>
+                <h5>
+                    Time: 4 minutes 53 seconds
+                </h5>
+                <p>
+                    This was the hardest task that the user was asked to complete. There is no button for this in th menu, which is where the user searched initially. After returning to the homepage the user was still unsure where to look until they clicked on their profile. Under their profile they found a button that led to their lists, but they did not see the button that was for creating new lists because it blended in with an advertisement.
+                </p>
+            </div>
+            <div class="col-12 col-lg-6">
+                <img src="assets/img/5.png" class="float-lg-end">
+            </div>
+        </div>
+
+        <div class="row">
+            <div class="col-12">
+                <h3 class="text-center">
+                    SUS Score
+                </h3>
             </div>
         </div>
     </div>
