--- a/index.html
+++ b/index.html
@@ -124,6 +124,114 @@
                 </h3>
             </div>
         </div>
+        <div>
+            <form action="#" id="myForm">
+                <div class="row">
+                    <div class="col-12">
+                        <h5 style="color: #2E5266;">
+                            Respond to each question with a 1-5 rating of how strongly you agree or disagree with the statements (1 is strongly disagree, 5 is strongly agree), and an overall score will be calculated.
+                        </h5>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-2 col-lg-1">
+                        <input style="margin-top: 10px;" class="form-control" type="number" id="q1" min="1" max="5">
+                    </div>
+                    <div style="margin-top: 10px;"  class="col-10">
+                        I think that I would like to use this system frequently.
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-2 col-lg-1"">
+                        <input style="margin-top: 10px;"  class="form-control" type="number" id="q2" min="1" max="5">
+                    </div>
+                    <div style="margin-top: 10px;"  class="col-10">
+                        I found the system unnecessarily complex
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-2 col-lg-1"">
+                        <input style="margin-top: 10px;"  class="form-control" type="number" id="q3" min="1" max="5">
+                    </div>
+                    <div  style="margin-top: 10px;"  class="col-10">
+                        I thought the system was easy to use.
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-2 col-lg-1"">
+                        <input style="margin-top: 10px;"  class="form-control" type="number" id="q4" min="1" max="5">
+                    </div>
+                    <div style="margin-top: 10px;"  class="col-10">
+                        I think that I would need the support of a technical person to be able to use this system.
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-2 col-lg-1"">
+                        <input style="margin-top: 10px;"  class="form-control" type="number" id="q5" min="1" max="5">
+                    </div>
+                    <div style="margin-top: 10px;"  class="col-10">
+                        I found the various functions in this system were well integrated.
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-2 col-lg-1"">
+                        <input style="margin-top: 10px;"  class="form-control" type="number" id="q6" min="1" max="5">
+                    </div>
+                    <div style="margin-top: 10px;"  class="col-10">
+                        I thought there was too much inconsistency in this system.
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-2 col-lg-1"">
+                        <input style="margin-top: 10px;"  class="form-control" type="number" id="q7" min="1" max="5">
+                    </div>
+                    <div style="margin-top: 10px;"  class="col-10">
+                        I would imagine that most people would learn to use this system very quickly.
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-2 col-lg-1"">
+                        <input style="margin-top: 10px;"  class="form-control" type="number" id="q8" min="1" max="5">
+                    </div>
+                    <div style="margin-top: 10px;"  class="col-10">
+                        I found the system very cumbersome to use.
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-2 col-lg-1"">
+                        <input style="margin-top: 10px;"  class="form-control" type="number" id="q9" min="1" max="5">
+                    </div>
+                    <div style="margin-top: 10px;"  class="col-10">
+                        I felt very confident using the system.
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-2 col-lg-1"">
+                        <input style="margin-top: 10px;"  class="form-control" type="number" id="q10" min="1" max="5">
+                    </div>
+                    <div style="margin-top: 10px;"  class="col-10">
+                        I needed to learn a lot of things before I could get going with this system.
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-3 col-lg-1">
+                        <button style="margin-top: 10px; width: 100%;" class="btn btn-primary"  type="submit">
+                            Submit
+                        </button>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-12">
+                        <label style="margin-top: 10px;">
+                            SUS Score:
+                            <output style="margin-top: 10px;"  id="answer"></output>
+                        </label>
+                    </div>
+                </div>
+                
+                
+            </form>
+        </div>
     </div>
 
     <!-- load javascript after the page elements render -->
