--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
                 </div>
                 <div class="row">
                     <div class="col-2 col-lg-1">
-                        <input style="margin-top: 10px;" class="form-control" type="number" id="q1" min="1" max="5">
+                        <input style="margin-top: 10px;" class="form-control" type="number" id="q1" min="1" max="5" value="4">
                     </div>
                     <div style="margin-top: 10px;"  class="col-10">
                         I think that I would like to use this system frequently.
@@ -143,7 +143,7 @@
                 </div>
                 <div class="row">
                     <div class="col-2 col-lg-1"">
-                        <input style="margin-top: 10px;"  class="form-control" type="number" id="q2" min="1" max="5">
+                        <input style="margin-top: 10px;"  class="form-control" type="number" id="q2" min="1" max="5" value="2">
                     </div>
                     <div style="margin-top: 10px;"  class="col-10">
                         I found the system unnecessarily complex
@@ -151,7 +151,7 @@
                 </div>
                 <div class="row">
                     <div class="col-2 col-lg-1"">
-                        <input style="margin-top: 10px;"  class="form-control" type="number" id="q3" min="1" max="5">
+                        <input style="margin-top: 10px;"  class="form-control" type="number" id="q3" min="1" max="5" value="4">
                     </div>
                     <div  style="margin-top: 10px;"  class="col-10">
                         I thought the system was easy to use.
@@ -159,7 +159,7 @@
                 </div>
                 <div class="row">
                     <div class="col-2 col-lg-1"">
-                        <input style="margin-top: 10px;"  class="form-control" type="number" id="q4" min="1" max="5">
+                        <input style="margin-top: 10px;"  class="form-control" type="number" id="q4" min="1" max="5" value="1">
                     </div>
                     <div style="margin-top: 10px;"  class="col-10">
                         I think that I would need the support of a technical person to be able to use this system.
@@ -167,7 +167,7 @@
                 </div>
                 <div class="row">
                     <div class="col-2 col-lg-1"">
-                        <input style="margin-top: 10px;"  class="form-control" type="number" id="q5" min="1" max="5">
+                        <input style="margin-top: 10px;"  class="form-control" type="number" id="q5" min="1" max="5" value="4">
                     </div>
                     <div style="margin-top: 10px;"  class="col-10">
                         I found the various functions in this system were well integrated.
@@ -175,7 +175,7 @@
                 </div>
                 <div class="row">
                     <div class="col-2 col-lg-1"">
-                        <input style="margin-top: 10px;"  class="form-control" type="number" id="q6" min="1" max="5">
+                        <input style="margin-top: 10px;"  class="form-control" type="number" id="q6" min="1" max="5" value="1">
                     </div>
                     <div style="margin-top: 10px;"  class="col-10">
                         I thought there was too much inconsistency in this system.
@@ -183,7 +183,7 @@
                 </div>
                 <div class="row">
                     <div class="col-2 col-lg-1"">
-                        <input style="margin-top: 10px;"  class="form-control" type="number" id="q7" min="1" max="5">
+                        <input style="margin-top: 10px;"  class="form-control" type="number" id="q7" min="1" max="5" value="5">
                     </div>
                     <div style="margin-top: 10px;"  class="col-10">
                         I would imagine that most people would learn to use this system very quickly.
@@ -191,7 +191,7 @@
                 </div>
                 <div class="row">
                     <div class="col-2 col-lg-1"">
-                        <input style="margin-top: 10px;"  class="form-control" type="number" id="q8" min="1" max="5">
+                        <input style="margin-top: 10px;"  class="form-control" type="number" id="q8" min="1" max="5" value="1">
                     </div>
                     <div style="margin-top: 10px;"  class="col-10">
                         I found the system very cumbersome to use.
@@ -199,7 +199,7 @@
                 </div>
                 <div class="row">
                     <div class="col-2 col-lg-1"">
-                        <input style="margin-top: 10px;"  class="form-control" type="number" id="q9" min="1" max="5">
+                        <input style="margin-top: 10px;"  class="form-control" type="number" id="q9" min="1" max="5" value="5">
                     </div>
                     <div style="margin-top: 10px;"  class="col-10">
                         I felt very confident using the system.
@@ -207,7 +207,7 @@
                 </div>
                 <div class="row">
                     <div class="col-2 col-lg-1"">
-                        <input style="margin-top: 10px;"  class="form-control" type="number" id="q10" min="1" max="5">
+                        <input style="margin-top: 10px;"  class="form-control" type="number" id="q10" min="1" max="5" value="1">
                     </div>
                     <div style="margin-top: 10px;"  class="col-10">
                         I needed to learn a lot of things before I could get going with this system.
