--- a/index.html
+++ b/index.html
@@ -214,8 +214,8 @@
                     </div>
                 </div>
                 <div class="row">
-                    <div class="col-3 col-lg-1">
-                        <button style="margin-top: 10px; width: 100%;" class="btn btn-primary"  type="submit">
+                    <div class="col-12">
+                        <button style="margin-top: 10px; width: 100px;" class="btn btn-primary"  type="submit">
                             Submit
                         </button>
                     </div>
